apps/prod/plausible/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: plausible
  labels:
    app.kubernetes.io/part-of: plausible
