apps/prod/plausible/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: plausible
  namespace: plausible
  labels:
    app.kubernetes.io/name: plausible
spec:
  selector:
    app.kubernetes.io/name: plausible
  ports:
    - port: 80
      targetPort: 8000
      name: http
